TST-238, TST-234 Style fixes for mobile consultant Fixed issue where cart affiliate text was cutoff for TST default Fixed issue where shop with TST button was off-screen on small phones

--- a/assets/scss/custom/layout/_cart.scss
+++ b/assets/scss/custom/layout/_cart.scss
@@ -10,6 +10,7 @@
         flex-direction: column;
         justify-content:center;
         margin-top:5.5rem;
+        min-height:120px;
         padding:.5rem 0 0;
         &+.body {
             margin-top:0;
@@ -70,6 +71,7 @@
     .cart {
         .cart-affiliate {
             margin-top:0;
+            min-height:0;
             .cart-affiliate-info {
                 .cart-affiliate-name {
                     br {
