--- a/assets/scss/custom/layout/_find-a-consultant.scss
+++ b/assets/scss/custom/layout/_find-a-consultant.scss
@@ -5,7 +5,7 @@
 #modal {
     #consultant-search {
         .genmodal-body {
-            max-height:none;
+            max-height:500px;
             .buy-wide-card.name-search {
                 .card-form {
                     flex-wrap:wrap;
